src/test/deca/syntax/invalid/decl_field/test_decl_field_without_2_types.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
//  extraneous input 'a' expecting ';'
// Historique:
//    cree le 01/01/2024

class A {   
    protected int int a ;
}
